# Prabu-Siliwangi-Bot

./: .gitignore  README.md  docker-compose.yml  env.template  package-lock.json  package.json  tsconfig.base.json  user-config.example.json
.github/: README.md
.github/workflows/: ci.yml  dev.yml  release.yml
.jest-cache/: haste-map-ed6762da98f263414b211e74d341f4b9-a93252ade9ed66a87c7c10fe027b71b8-6a9dad26ecab94607283dffaba9cad5a  perf-cache-ed6762da98f263414b211e74d341f4b9-da39a3ee5e6b4b0d3255bfef95601890
.jest-cache/jest-transform-cache-ed6762da98f263414b211e74d341f4b9-1324230084614362f519ae4cb2580aab/10/: enhanceddlmmtest_10dd175d8bfadb3cd7fc7ff8ad0dd4d9  enhanceddlmmtest_10dd175d8bfadb3cd7fc7ff8ad0dd4d9.map
apps/kabayan-bot/: package.json  test-bot.js.bak  tsconfig.json
apps/kabayan-bot/src/: index.ts
apps/prabu-siliwangi/: Dockerfile  package.json
docker/: README.md
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  ARSITEKTUR.md  TESTING.md
scripts/: deploy.sh  monitor.sh  preflight-live.ts  rollback.sh  setup-server.sh  smoke-paper-flow.ts  start-all.ps1  verify-wallet.ts
services/rust-copy-engine/: .env.example  Cargo.toml  Dockerfile  Dockerfile.simple  README.md  start.ps1
services/rust-copy-engine/src/: health.rs  lib.rs  main.rs  state.rs  trading.rs  types.rs  websocket.rs
services/rust-copy-engine/src/dex/: mod.rs  pump_fun.rs  raydium.rs
services/rust-copy-engine/src/jito/: bundler.rs  jito.rs  mod.rs
services/rust-copy-engine/static/: index.html
tests/: integration.test.ts  setup.ts
(+107 files in other folders)
