[package]
name = "prabu-rust-copy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "=1.18"
solana-client = "=1.18"
solana-account-decoder = "=1.18"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[lib]
name = "prabu_rust_copy_engine"
path = "src/lib.rs"

[[bin]]
name = "prabu-copy-engine"
path = "src/main.rs"
